salesforce/force-app/main/default/objects/Account/fields/AccountManager__c.field-meta.xml
<CustomField>
    <fullName>AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal user managing the account relationship.</description>
    <inlineHelpText>Lookup the Account Manager responsible for this customer.</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accounts Managed</relationshipLabel>
    <relationshipName>Accounts_Managed</relationshipName>
    <type>Lookup</type>
</CustomField>