salesforce/force-app/main/default/objects/Account/fields/AnnualSpend__c.field-meta.xml
<CustomField>
    <fullName>AnnualSpend__c</fullName>
    <description>Estimated annual spend with our business.</description>
    <inlineHelpText>Enter the estimated yearly spend amount.</inlineHelpText>
    <label>Annual Spend</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>