salesforce/force-app/main/default/objects/Account/fields/CompanySize__c.field-meta.xml
<CustomField>
    <fullName>CompanySize__c</fullName>
    <description>Business company size band.</description>
    <inlineHelpText>Select size by employees or revenue band.</inlineHelpText>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>