salesforce/force-app/main/default/objects/Account/fields/CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditLimit__c</fullName>
    <description>Approved credit limit for the account.</description>
    <inlineHelpText>Enter the approved maximum credit exposure.</inlineHelpText>
    <label>Credit Limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>