salesforce/force-app/main/default/objects/Account/fields/ExternalRef__c.field-meta.xml
<CustomField>
    <fullName>ExternalRef__c</fullName>
    <description>Idempotent external reference key for data loads.</description>
    <externalId>true</externalId>
    <inlineHelpText>Used by data migration scripts as External ID.</inlineHelpText>
    <label>External Ref</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>