salesforce/force-app/main/default/objects/Account/fields/FleetSize__c.field-meta.xml
<CustomField>
    <fullName>FleetSize__c</fullName>
    <description>Number of vehicles in the fleet (for business accounts).</description>
    <inlineHelpText>Enter total active vehicles managed by this account.</inlineHelpText>
    <label>Fleet Size</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>