salesforce/force-app/main/default/objects/Account/fields/HouseholdName__c.field-meta.xml
<CustomField>
    <fullName>HouseholdName__c</fullName>
    <description>Household display name for consumer accounts.</description>
    <inlineHelpText>Enter household name (e.g., The Martinez Household).</inlineHelpText>
    <label>Household Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>