salesforce/force-app/main/default/objects/Account/fields/LoyaltyTier__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyTier__c</fullName>
    <description>Customer loyalty tier.</description>
    <inlineHelpText>Select Bronze, Silver, Gold, or Platinum.</inlineHelpText>
    <label>Loyalty Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>