salesforce/force-app/main/default/objects/Account/fields/MonthlySpend__c.field-meta.xml
<CustomField>
    <fullName>MonthlySpend__c</fullName>
    <description>Estimated monthly spend with our business.</description>
    <inlineHelpText>Enter the estimated monthly spend.</inlineHelpText>
    <label>Monthly Spend</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>