salesforce/force-app/main/default/objects/Account/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <description>Standard payment terms for invoices.</description>
    <inlineHelpText>Select Net 15, Net 30, or custom terms.</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net30</fullName>
            </value>
            <value>
                <fullName>Net60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>