salesforce/force-app/main/default/objects/Account/fields/PreferredBrands__c.field-meta.xml
<CustomField>
    <fullName>PreferredBrands__c</fullName>
    <description>Preferred vehicle brands for this customer.</description>
    <inlineHelpText>List one or more preferred brands.</inlineHelpText>
    <label>Preferred Brands</label>
    <length>255</length>
    <type>Text</type>
</CustomField>