salesforce/force-app/main/default/objects/Account/fields/RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalDate__c</fullName>
    <description>Contract or relationship renewal date.</description>
    <inlineHelpText>Set the next renewal date for this account.</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>