salesforce/force-app/main/default/objects/Account/recordTypes/Household.recordType-meta.xml
<RecordType>
    <fullName>Household</fullName>
    <active>true</active>
    <label>Household</label>
</RecordType>